--- a/src/index.html
+++ b/src/index.html
@@ -121,7 +121,7 @@
                     <div class="popup__input-conainer">
                         <input type="url" placeholder="Ссылка" class="popup__input popup__input_name_image" name="link"
                             id="ava-link" required>
-                        <span class="popup__text-error" id="error-image"></span>
+                        <span class="popup__text-error" id="error-avatar-image></span>
                     </div>
                     <button class="popup__button popup__button_user_image" type="submit">Сохранить</button>
                 </div>
