--- a/src/index.html
+++ b/src/index.html
@@ -100,7 +100,7 @@
         </div>
     </div>
     <!-- попап подтверждения удаления карточки -->
-    <div class="popup popup__card-remove popup_overlay">
+    <div class="popup popup_card_remove popup_overlay">
         <div class="popup__content">
             <button class="popup__close-button popup__close-button_image_contant" type="button"></button>
             <form class="popup__form popup__form_image_add" name="formUserAvatarAdd" novalidate>
@@ -112,7 +112,7 @@
         </div>
     </div>
     <!-- форма редактирования аватара -->
-    <div class="popup popup__avatar-redact popup_overlay">
+    <div class="popup popup_avatar_redact popup_overlay">
         <div class="popup__content">
             <button class="popup__close-button popup__close-button_image_contant" type="button"></button>
             <form class="popup__form popup__form_image_add" name="formUserAvatarAdd" novalidate>
