--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
                         <h2 class="element__title"></h2>
                         <div>
                             <button class="element__like" type="button"></button>
-                            <h2 class="element__like-sum">1</h2>
+                            <h2 class="element__like-sum"></h2>
                         </div>
                         <button class="element__button-delete"></button>
                     </div>
